@@ -1890,6 +1890,106 @@ comment|// avoid FC insanity
 block|}
 annotation|@
 name|Test
+DECL|method|testExternalFileFieldStringKeys
+specifier|public
+name|void
+name|testExternalFileFieldStringKeys
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|extField
+init|=
+literal|"foo_extfs"
+decl_stmt|;
+specifier|final
+name|String
+name|keyField
+init|=
+literal|"sfile_s"
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"991"
+argument_list|,
+name|keyField
+argument_list|,
+literal|"AAA=AAA"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"992"
+argument_list|,
+name|keyField
+argument_list|,
+literal|"BBB"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"993"
+argument_list|,
+name|keyField
+argument_list|,
+literal|"CCC=CCC"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|makeExternalFile
+argument_list|(
+name|extField
+argument_list|,
+literal|"AAA=AAA=543210\nBBB=-8\nCCC=CCC=250"
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+expr_stmt|;
+name|singleTest
+argument_list|(
+name|extField
+argument_list|,
+literal|"\0"
+argument_list|,
+literal|991
+argument_list|,
+literal|543210
+argument_list|,
+literal|992
+argument_list|,
+operator|-
+literal|8
+argument_list|,
+literal|993
+argument_list|,
+literal|250
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testGeneral
 specifier|public
 name|void
